# arxiv_ai_reader

./: .gitignore  README.md  REFRESH_GUIDE.md  build_static.py  pyproject.toml  requirements.txt  setup_venv.sh  start.sh
backend/: analyzer.py  api.py  conference.py  default_config.py  fetcher.py  mcp_server.py  models.py  scholar.py  search_utils.py  storage.py
backend/serving/: __init__.py  auth.py  config_resolver.py  db.py  integrate.py  middleware.py  paper_overlay.py  views.py
frontend/: app.js  index.html  style.css
