[project]
name = "arxiv-ai-reader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "openai>=1.12.0",
    "feedparser>=6.0.11",
    "aiofiles>=23.2.1",
    "python-dateutil>=2.8.2",
    "mcp>=1.0.0",
]
